[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/apple.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Edit.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Product_Labels/Apple.gd" type="Script" id=3]

[node name="Apple" type="PanelContainer"]
margin_right = 150.0
margin_bottom = 118.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "An apple a day keeps 9/10 doctors away!"
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Body" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 279.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Body"]
margin_right = 136.0
margin_bottom = 14.0
text = "Apple"
align = 1

[node name="TextureRect" type="TextureRect" parent="Body"]
margin_top = 18.0
margin_right = 136.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 96 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Label2" type="Label" parent="Body"]
margin_top = 118.0
margin_right = 136.0
margin_bottom = 132.0
text = "Cost: 1"
align = 1

[node name="Stock" type="Label" parent="Body"]
margin_top = 136.0
margin_right = 136.0
margin_bottom = 150.0
text = "Stock: 0"
align = 1

[node name="LineEdit" type="LineEdit" parent="Body"]
margin_top = 154.0
margin_right = 136.0
margin_bottom = 178.0
align = 1
max_length = 5
script = ExtResource( 2 )

[node name="Button" type="Button" parent="Body"]
margin_top = 182.0
margin_right = 136.0
margin_bottom = 202.0
text = "Buy"

[node name="Label3" type="Label" parent="Body"]
margin_top = 206.0
margin_right = 136.0
margin_bottom = 220.0
text = "Price : 10"
align = 1

[node name="LineEdit2" type="LineEdit" parent="Body"]
margin_top = 224.0
margin_right = 136.0
margin_bottom = 248.0
align = 1
script = ExtResource( 2 )

[node name="Button2" type="Button" parent="Body"]
margin_top = 252.0
margin_right = 136.0
margin_bottom = 272.0
text = "Set price"

[connection signal="pressed" from="Body/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Body/Button2" to="." method="_on_Button2_pressed"]
